[gd_scene load_steps=13 format=3 uid="uid://dsebf2qrot5c5"]

[ext_resource type="FontFile" uid="uid://djg6rrq5j3t3a" path="res://assets/fonts/StackedPixels.ttf" id="1_mt1vs"]
[ext_resource type="Script" uid="uid://s467leejmmi4" path="res://scripts/ui/death_menu.gd" id="1_pyvjv"]
[ext_resource type="FontFile" uid="uid://bwc2yki1k4wud" path="res://assets/fonts/BoldPixels.otf" id="2_dsday"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_23tc5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dsday"]
bg_color = Color(0, 0, 0, 0.235294)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mt1vs"]
bg_color = Color(0, 1, 1, 0.45098)
border_color = Color(0, 1, 1, 0.45098)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pyvjv"]
bg_color = Color(0, 0, 0, 0.235294)
border_color = Color(0, 0, 0, 0.235294)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mt1vs"]
content_margin_top = 3.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_23tc5"]
bg_color = Color(0, 0, 0, 0.235294)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1uyq3"]
bg_color = Color(0, 1, 1, 0.45098)
border_color = Color(0, 1, 1, 0.45098)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0g38q"]
bg_color = Color(0, 0, 0, 0.235294)
border_color = Color(0, 0, 0, 0.235294)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pyvjv"]
content_margin_top = 3.0

[node name="DeathMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pyvjv")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel"]
texture_filter = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.292
anchor_right = 0.5
anchor_bottom = 0.292
offset_left = -150.5
offset_top = -15.12
offset_right = 150.5
offset_bottom = 14.88
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_dsday")
theme_override_font_sizes/font_size = 36
text = "VOCÃŠ FOI DERROTADO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.501
anchor_top = 0.521
anchor_right = 0.501
anchor_bottom = 0.521
offset_left = -85.64
offset_top = -32.56
offset_right = 85.36
offset_bottom = 32.44
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_23tc5")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5
alignment = 1

[node name="RestartButton" type="Button" parent="Panel/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/focus = SubResource("StyleBoxFlat_dsday")
theme_override_styles/hover = SubResource("StyleBoxFlat_mt1vs")
theme_override_styles/normal = SubResource("StyleBoxFlat_pyvjv")

[node name="Label" type="Label" parent="Panel/Panel/VBoxContainer/RestartButton"]
texture_filter = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_mt1vs")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_mt1vs")
text = "REINICIAR"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuitButton" type="Button" parent="Panel/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/focus = SubResource("StyleBoxFlat_23tc5")
theme_override_styles/hover = SubResource("StyleBoxFlat_1uyq3")
theme_override_styles/normal = SubResource("StyleBoxFlat_0g38q")

[node name="Label" type="Label" parent="Panel/Panel/VBoxContainer/QuitButton"]
texture_filter = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_mt1vs")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_pyvjv")
text = "SAIR"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Panel/Panel/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Panel/Panel/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
